# OOP_coursework

./: CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  meal.cpp  meal.h  output.cpp  output.h
src/: database.h  main.cpp  meal.h  output.cpp  output.h
